@@ -19,7 +19,7 @@ define(['jquery', 'underscore'], function ($, _) {
             if (args !== undefined) {
                 data.args = args;
             }
-            d = $.post('/_sql', JSON.stringify(data));
+            d = $.post(SQL.host + '/_sql', JSON.stringify(data));
             return d;
         }
 
